--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest-puppeteer": "^8.0.6",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.4"
   }
 }
