--- a/package.json
+++ b/package.json
@@ -4,15 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jest/expect": "^29.5.0",
+    "@types/jest-environment-puppeteer": "^5.0.3",
+    "@types/puppeteer": "^7.0.4",
     "express": "^4.18.2",
-    "jest-puppeteer": "^8.0.6",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "puppeteer": "^20.1.2",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
+    "@types/jest": "^29.5.1",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.1.0",
+    "babel-jest": "^29.5.0",
+    "jest-puppeteer": "^8.0.6",
+    "ts-jest": "^29.1.0"
   }
 }
